test: disabled (lighten)

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2105,7 +2105,7 @@
           "bg": {
             "solid": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.bg.solid.default}",
+              "$value": "{app.color.component.primary.bg.solid.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2118,7 +2118,7 @@
             },
             "translucent": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.bg.translucent.default}",
+              "$value": "{app.color.component.primary.bg.translucent.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2131,7 +2131,7 @@
             },
             "tone": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.bg.tone.default}",
+              "$value": "{app.color.component.primary.bg.tone.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2146,7 +2146,7 @@
           "border": {
             "solid": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.border.solid.default}",
+              "$value": "{app.color.component.primary.border.solid.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2159,7 +2159,7 @@
             },
             "translucent": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.border.translucent.default}",
+              "$value": "{app.color.component.primary.border.translucent.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2174,7 +2174,7 @@
           "fg": {
             "solid": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.fg.solid.default}",
+              "$value": "{app.color.component.primary.fg.solid.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2187,7 +2187,7 @@
             },
             "muted": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.fg.muted.default}",
+              "$value": "{app.color.component.primary.fg.muted.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2200,7 +2200,7 @@
             },
             "subtle": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.fg.subtle.default}",
+              "$value": "{app.color.component.primary.fg.subtle.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2213,7 +2213,7 @@
             },
             "onSolid": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.fg.onSolid.default}",
+              "$value": "{app.color.component.primary.fg.onSolid.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2226,7 +2226,7 @@
             },
             "onTone": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.fg.onTone.default}",
+              "$value": "{app.color.component.primary.fg.onTone.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
@@ -2239,7 +2239,7 @@
             },
             "onTranslucent": {
               "$type": "color",
-              "$value": "{app.color.component.neutral.fg.onTranslucent.default}",
+              "$value": "{app.color.component.primary.fg.onTranslucent.default}",
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
