--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2204,7 +2204,7 @@
               "$extensions": {
                 "studio.tokens": {
                   "modify": {
-                    "type": "lighten",
+                    "type": "darken",
                     "value": "0.32",
                     "space": "hsl"
                   }
