--- a/tokens/application.json
+++ b/tokens/application.json
@@ -330,7 +330,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{config.color.modifier.fg.other.hover}",
                       "space": "hsl"
                     }
@@ -343,7 +343,7 @@
                 "$extensions": {
                   "studio.tokens": {
                     "modify": {
-                      "type": "darken",
+                      "type": "lighten",
                       "value": "{config.color.modifier.fg.other.active}",
                       "space": "hsl"
                     }
