--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2117,14 +2117,29 @@
               }
             },
             "translucent": {
-              "$type": "color",
-              "$value": "{app.color.component.primary.bg.translucent.default}",
-              "$extensions": {
-                "studio.tokens": {
-                  "modify": {
-                    "type": "lighten",
-                    "value": "0.32",
-                    "space": "hsl"
+              "default": {
+                "$type": "color",
+                "$value": "{app.color.component.primary.bg.translucent.default}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "lighten",
+                      "value": "0.32",
+                      "space": "hsl"
+                    }
+                  }
+                }
+              },
+              "hover": {
+                "$type": "color",
+                "$value": "{app.color.component.primary.bg.translucent.hover}",
+                "$extensions": {
+                  "studio.tokens": {
+                    "modify": {
+                      "type": "lighten",
+                      "value": "0.32",
+                      "space": "hsl"
+                    }
                   }
                 }
               }
@@ -2282,7 +2297,7 @@
             },
             "tone": {
               "$type": "color",
-              "$value": "{app.color.component.disabled.bg.solid}"
+              "$value": "{app.color.component.disabled.bg.solid.default}"
             }
           },
           "border": {
