refactor: surface > font-size to fixed values

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -2750,63 +2750,63 @@
       "surface": {
         "display": {
           "sm": {
-            "$value": "{app.fontSize.surface.body.md} * 1.75",
+            "$value": "1.75rem",
             "$type": "fontSizes"
           },
           "md": {
-            "$value": "{app.fontSize.surface.display.sm} + 1rem",
+            "$value": "2.75rem",
             "$type": "fontSizes"
           },
           "lg": {
-            "$value": "{app.fontSize.surface.display.md} + 1rem",
+            "$value": "3.75rem",
             "$type": "fontSizes"
           }
         },
         "title": {
           "sm": {
-            "$value": "{app.fontSize.surface.body.md} * 1.125",
+            "$value": "1.125rem",
             "$type": "fontSizes"
           },
           "md": {
-            "$value": "{app.fontSize.surface.title.sm} + 0.25rem",
+            "$value": "1.375rem",
             "$type": "fontSizes"
           },
           "lg": {
-            "$value": "{app.fontSize.surface.title.md} + 0.25rem",
+            "$value": "1.625rem",
             "$type": "fontSizes"
           }
         },
         "callout": {
           "sm": {
-            "$value": "{app.fontSize.surface.body.md} - 0.125rem",
+            "$value": "0.875rem",
             "$type": "fontSizes"
           },
           "md": {
-            "$value": "{app.fontSize.surface.callout.sm} + 0.125rem",
+            "$value": "1rem",
             "$type": "fontSizes"
           },
           "lg": {
-            "$value": "{app.fontSize.surface.callout.md} + 0.125rem",
+            "$value": "1.125rem",
             "$type": "fontSizes"
           }
         },
         "subtitle": {
           "sm": {
-            "$value": "{app.fontSize.surface.body.md} * 1.125",
+            "$value": "1.125rem",
             "$type": "fontSizes"
           },
           "md": {
-            "$value": "{app.fontSize.surface.subtitle.sm} + 0.125rem",
+            "$value": "1.25rem",
             "$type": "fontSizes"
           },
           "lg": {
-            "$value": "{app.fontSize.surface.subtitle.md} + 0.125rem",
+            "$value": "1.375rem",
             "$type": "fontSizes"
           }
         },
         "body": {
           "sm": {
-            "$value": "{app.fontSize.surface.body.md} - 0.125rem",
+            "$value": "0.875rem",
             "$type": "fontSizes"
           },
           "md": {
@@ -2816,19 +2816,19 @@
         },
         "caption": {
           "default": {
-            "$value": "{app.fontSize.surface.body.md} - 0.25rem",
+            "$value": "0.75rem",
             "$type": "fontSizes"
           }
         },
         "footnote": {
           "default": {
-            "$value": "{app.fontSize.surface.body.md} - 0.25rem",
+            "$value": "0.75rem",
             "$type": "fontSizes"
           }
         },
         "code": {
           "default": {
-            "$value": "{app.fontSize.surface.body.md} - 0.125rem",
+            "$value": "0.875rem",
             "$type": "fontSizes"
           }
         }
