--- a/tokens/config.json
+++ b/tokens/config.json
@@ -93,17 +93,85 @@
           }
         },
         "blue": {
-          "default": {
-            "$value": "hsl(220, 100%, 48%)",
-            "$type": "color"
+          "solid": {
+            "low": {
+              "1": {
+                "$value": "hsl(220, 100%, 92%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(220, 100%, 88%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(220, 100%, 84%)",
+                "$type": "color"
+              }
+            },
+            "mid": {
+              "1": {
+                "$value": "hsl(220, 100%, 52%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(220, 100%, 48%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(220, 100%, 44%)",
+                "$type": "color"
+              }
+            },
+            "high": {
+              "1": {
+                "$value": "hsl(220, 100%, 24%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(220, 100%, 20%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(220, 100%, 16%)",
+                "$type": "color"
+              }
+            }
           },
-          "low": {
-            "$value": "hsl(220, 100%, 84%)",
-            "$type": "color"
-          },
-          "high": {
-            "$value": "hsl(220, 100%, 24%)",
-            "$type": "color"
+          "translucent": {
+            "low": {
+              "1": {
+                "$value": "hsla(220, 100%, 56%, 0.36)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsla(220, 100%, 56%, 0.40)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsla(220, 100%, 56%, 0.44)",
+                "$type": "color"
+              }
+            },
+            "mid": {
+              "1": {
+                "$value": "hsla(220, 100%, 56%, 0.48)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsla(220, 100%, 56%, 0.56)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsla(220, 100%, 56%, 0.64)",
+                "$type": "color"
+              }
+            },
+            "high": {
+              "1": {
+                "$value": "hsla(220, 100%, 56%, 0.88)",
+                "$type": "color"
+              }
+            }
           }
         },
         "red": {
@@ -189,31 +257,167 @@
           }
         },
         "green": {
-          "default": {
-            "$value": "hsl(155, 100%, 28%)",
-            "$type": "color"
+          "solid": {
+            "low": {
+              "1": {
+                "$value": "hsl(155, 100%, 92%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(155, 100%, 88%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(155, 100%, 84%)",
+                "$type": "color"
+              }
+            },
+            "mid": {
+              "1": {
+                "$value": "hsl(155, 100%, 34%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(155, 100%, 32%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(155, 100%, 30%)",
+                "$type": "color"
+              }
+            },
+            "high": {
+              "1": {
+                "$value": "hsl(155, 100%, 16%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(155, 100%, 14%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(155, 100%, 12%)",
+                "$type": "color"
+              }
+            }
           },
-          "low": {
-            "$value": "hsl(155, 100%, 84%)",
-            "$type": "color"
-          },
-          "high": {
-            "$value": "hsl(155, 80%, 18%)",
-            "$type": "color"
+          "translucent": {
+            "low": {
+              "1": {
+                "$value": "hsla(155, 100%, 29%, 0.36)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsla(155, 100%, 29%, 0.40)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsla(155, 100%, 29%, 0.44)",
+                "$type": "color"
+              }
+            },
+            "mid": {
+              "1": {
+                "$value": "hsla(155, 100%, 29%, 0.48)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsla(155, 100%, 29%, 0.56)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsla(155, 100%, 29%, 0.64)",
+                "$type": "color"
+              }
+            },
+            "high": {
+              "1": {
+                "$value": "hsla(155, 100%, 29%, 0.88)",
+                "$type": "color"
+              }
+            }
           }
         },
         "yellow": {
-          "default": {
-            "$value": "hsl(40, 100%, 36%)",
-            "$type": "color"
+          "solid": {
+            "low": {
+              "1": {
+                "$value": "hsl(40, 62%, 87%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(40, 62%, 83%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(40, 62%, 79%)",
+                "$type": "color"
+              }
+            },
+            "mid": {
+              "1": {
+                "$value": "hsl(40, 100%, 38%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(40, 100%, 36%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(40, 100%, 34%)",
+                "$type": "color"
+              }
+            },
+            "high": {
+              "1": {
+                "$value": "hsl(40, 100%, 16%)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsl(40, 100%, 14%)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsl(40, 100%, 12%)",
+                "$type": "color"
+              }
+            }
           },
-          "low": {
-            "$value": "hsl(40, 100%, 84%)",
-            "$type": "color"
-          },
-          "high": {
-            "$value": "hsl(40, 100%, 22%)",
-            "$type": "color"
+          "translucent": {
+            "low": {
+              "1": {
+                "$value": "hsla(40, 100%, 29%, 0.36)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsla(40, 100%, 29%, 0.40)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsla(40, 100%, 29%, 0.44)",
+                "$type": "color"
+              }
+            },
+            "mid": {
+              "1": {
+                "$value": "hsla(40, 100%, 29%, 0.48)",
+                "$type": "color"
+              },
+              "2": {
+                "$value": "hsla(40, 100%, 29%, 0.56)",
+                "$type": "color"
+              },
+              "3": {
+                "$value": "hsla(40, 100%, 29%, 0.64)",
+                "$type": "color"
+              }
+            },
+            "high": {
+              "1": {
+                "$value": "hsla(40, 100%, 29%, 0.88)",
+                "$type": "color"
+              }
+            }
           }
         },
         "neutral": {
